hopefully done, can't remember it and forgot to push after completion sadFace

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 </body>
-<h1>Hi!</h1>
-<a href="greeting">Click here to list all <em>greetings</em> using <strong>JSP</strong>.</a>
+<a href="task_one.jsp">Task 1</a>
+<a href="task_two.jsp">Task 2</a>
+<a href="task_three.jsp">Task 3</a>
+<a href="task_four.jsp">Task 4</a>
+<a href="task_five.jsp">Task 5</a>
 </html>
